[project]
name = "stock-picker-agents"
version = "0.1.0"
description = "RS-first multi-agent Korean stock swing/day-trade picker."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stock-picker-agents = "src.main:main"

[tool.setuptools]
packages = [
  "src",
  "src.agents",
  "src.data_providers",
  "src.models",
  "src.report",
  "src.strategy_docs",
  "src.utils",
  "src.voting",
]
